--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -24,8 +24,8 @@ jobs:
         uses: StephaneBour/actions-calver@master
         id: calver
         with:
-          date_format: "%Y-%m-%d"
-#           release: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
+          date_format: "%Y.%m.%d"
+          release: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
