--- a/.github/workflows/generate-documentation.yml
+++ b/.github/workflows/generate-documentation.yml
@@ -51,9 +51,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Install dependencies
-        if: steps.cache-dependencies.outputs.cache-hit != 'true'
-        run: yarn
+      # - name: Install dependencies
+      #   if: steps.cache-dependencies.outputs.cache-hit != 'true'
+      #   run: yarn
 
       - name: Generate documents
         run: yarn build:docs
