--- a/.github/workflows/generate-documentation.yml
+++ b/.github/workflows/generate-documentation.yml
@@ -51,9 +51,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      # - name: Install dependencies
-      #   if: steps.cache-dependencies.outputs.cache-hit != 'true'
-      #   run: yarn
+      - name: Cache NPM dependencies # (2)
+        uses: actions/cache@v3
+        id: cache-dependencies
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
+
+      - name: Install dependencies
+        if: steps.cache-dependencies.outputs.cache-hit != 'true'
+        run: yarn
 
       - name: Generate documents
         run: yarn build:docs
