--- a/.github/workflows/generate-documentation.yml
+++ b/.github/workflows/generate-documentation.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           node-version-file: ".nvmrc"
           cache: "yarn"
-          # cache-dependency-path: subdir/package-lock.json
+          cache-dependency-path: subdir/package-lock.json
           # run: yarn
 
       - name: Cache NPM dependencies # (2)
