--- a/.github/workflows/generate-documentation.yml
+++ b/.github/workflows/generate-documentation.yml
@@ -53,11 +53,11 @@ jobs:
         if: steps.cache-dependencies.outputs.cache-hit != 'true'
         run: yarn
 
-      - name: Build tokena
+      - name: Build tokens
         run: yarn build:tokens
 
-      - name: Build tokena
-        run: yarn build:tokens
+      - name: Build icons
+        run: yarn build:icons
 
       - name: Generate documents
         run: yarn build:docs
