--- a/.github/workflows/publish-codecov.yml
+++ b/.github/workflows/publish-codecov.yml
@@ -9,7 +9,7 @@ on:
       - ".yarn/versions/**"
 
 jobs:
-  publish-codecov:
+  setup:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -35,6 +35,28 @@ jobs:
 
       - name: Install dependencies
         if: steps.yarn-cache-dir-path.outputs.cache-hit != 'true'
+        run: yarn
+
+  generate-report:
+    needs: [setup]
+    runs-on: ubuntu-latest
+    env:
+      TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+      TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Cache NPM dependencies
+        uses: actions/cache@v3
+        id: cache-dependencies
+        with:
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
+
+      - name: Install dependencies
+        if: steps.cache-dependencies.outputs.cache-hit != 'true'
         run: yarn
 
       - name: Run build tokens
