--- a/packages/react/src/atomic/Select/package.json
+++ b/packages/react/src/atomic/Select/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/select",
-  "version": "2.3.0",
+  "version": "2.3.1-rc.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -31,5 +31,6 @@
   },
   "devDependencies": {
     "@nimbus-ds/webpack": "workspace:^"
-  }
+  },
+  "stableVersion": "2.3.0"
 }
