--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -31,7 +31,10 @@ jobs:
       - name: Install dependencies
         if: steps.cache-dependencies.outputs.cache-hit != 'true'
         run: yarn
-    
+
+      - name: Run tests
+        run: yarn test:ci
+
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
