--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -32,6 +32,12 @@ jobs:
         if: steps.cache-dependencies.outputs.cache-hit != 'true'
         run: yarn
 
+      - name: Run build tokens
+        run: yarn build:tokens
+
+      - name: Run build icons
+        run: yarn build:icons
+
       - name: Run tests
         run: yarn test:ci
 
