--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,9 +6,9 @@ sonar.projectName=nimbus-design-system
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=.scripts/,packages/
+sonar.sources=.scripts/**,packages/**
 sonar.exclusions=packages/**/*.stories.tsx,packages/**/*.stories.mdx
 sonar.test.inclusions=packages/**/*.spec.tsx
-sonar.coverage.exclusions=.scripts/,packages/core/typings/
+sonar.coverage.exclusions=.scripts/**,packages/core/typings/**
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.qualitygate.wait=true
