--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.projectName=nimbus-design-system
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=.scripts/**,packages/**
+sonar.sources=.scripts,packages
 sonar.exclusions=packages/**/*.stories.tsx,packages/**/*.stories.mdx
 sonar.test.inclusions=packages/**/*.spec.tsx
 sonar.coverage.exclusions=.scripts/**,packages/core/typings/**
