--- a/packages/core/styles/package.json
+++ b/packages/core/styles/package.json
@@ -28,6 +28,7 @@
     "@vanilla-extract/css": "^1.9.2",
     "@vanilla-extract/recipes": "^0.3.0",
     "@vanilla-extract/sprinkles": "^1.5.1",
+    "css-loader": "^6.7.3",
     "glob": "^8.0.3",
     "rainbow-sprinkles": "^0.14.0",
     "ts-node": "^10.9.1"
