--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,6 +9,6 @@ sonar.projectName=nimbus-design-system
 sonar.sources=.scripts,packages
 sonar.exclusions=packages/**/*.stories.tsx,packages/**/*.stories.mdx
 sonar.test.inclusions=packages/**/*.spec.tsx
-sonar.coverage.exclusions=.scripts/**,packages/core/typings/**,packages/core/scripts/**
+sonar.coverage.exclusions=.scripts/**,packages/core/typings/**,packages/core/scripts/**,packages/core/webpack/**
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.qualitygate.wait=true
