--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/components",
-  "version": "3.1.1-rc.1",
+  "version": "3.2.0",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -31,6 +31,5 @@
   },
   "devDependencies": {
     "@nimbus-ds/webpack": "workspace:^"
-  },
-  "stableVersion": "3.1.0"
+  }
 }
