--- a/packages/react/src/atomic/Select/package.json
+++ b/packages/react/src/atomic/Select/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/select",
-  "version": "2.3.2-rc.1",
+  "version": "2.3.2",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -32,6 +32,5 @@
   },
   "devDependencies": {
     "@nimbus-ds/webpack": "workspace:^"
-  },
-  "stableVersion": "2.3.1"
+  }
 }
