--- a/packages/core/scripts/package.json
+++ b/packages/core/scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/scripts",
-  "version": "1.2.0",
+  "version": "1.2.1-rc.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -26,5 +26,6 @@
   },
   "devDependencies": {
     "typescript": "^4.9.3"
-  }
+  },
+  "stableVersion": "1.2.0"
 }
