--- a/packages/core/webpack/package.json
+++ b/packages/core/webpack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/webpack",
-  "version": "1.3.0",
+  "version": "1.3.1-rc.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -34,5 +34,6 @@
     "webpack": "^5.76.0",
     "webpack-merge": "^5.8.0",
     "webpack-shell-plugin-next": "^2.3.1"
-  }
+  },
+  "stableVersion": "1.3.0"
 }
