--- a/packages/react/src/atomic/Text/package.json
+++ b/packages/react/src/atomic/Text/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/text",
-  "version": "6.1.0",
+  "version": "6.2.0-rc.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -30,5 +30,6 @@
   },
   "devDependencies": {
     "@nimbus-ds/webpack": "workspace:^"
-  }
+  },
+  "stableVersion": "6.1.0"
 }
