--- a/packages/react/src/atomic/Tooltip/package.json
+++ b/packages/react/src/atomic/Tooltip/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/tooltip",
-  "version": "2.2.0",
+  "version": "2.2.1-rc.1",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -31,5 +31,6 @@
   "devDependencies": {
     "@nimbus-ds/webpack": "workspace:^",
     "@vanilla-extract/dynamic": "^2.0.2"
-  }
+  },
+  "stableVersion": "2.2.0"
 }
