--- a/packages/core/tokens/package.json
+++ b/packages/core/tokens/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nimbus-ds/tokens",
-  "version": "8.0.0-rc.5",
+  "version": "7.0.0",
   "license": "MIT",
   "main": "dist/index.js",
   "files": [
@@ -23,6 +23,5 @@
   },
   "devDependencies": {
     "style-dictionary": "^3.7.1"
-  },
-  "stableVersion": "7.0.0"
+  }
 }
