--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
   },
   "scripts": {
     "build": "yarn build:packages",
-    "build:packages": "yarn build:webpack && yarn build:tokens && yarn build:icons && yarn build:components && babel-node -x .ts ./.scripts/build-packages",
+    "build:packages": "yarn build:tokens && yarn build:icons && yarn build:components && babel-node -x .ts ./.scripts/build-packages",
     "build:components": "babel-node -x .ts ./.scripts/build-components",
     "build:docs": "babel-node -x .ts ./.scripts/json-documentation",
     "build:icons": "yarn workspace @nimbus-ds/icons build",
     "build:tokens": "yarn workspace @nimbus-ds/tokens build",
-    "build:webpack": "yarn workspace @nimbus-ds/webpack build",
     "build:storybook": "storybook build -o .build-storybook",
     "bump:check": "yarn version check",
     "bump:next": "yarn version apply --all --prerelease",
