--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Run build icons
         run: yarn build:icons
 
+      - name: Run tests
+        run: yarn test:ci
+
       - name: SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@v4
         env:
