--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,9 +7,11 @@ sonar.projectName=nimbus-design-system
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=.scripts,packages
-sonar.exclusions=packages/**/*.stories.tsx,packages/**/*.stories.mdx
+sonar.exclusions=packages/**/*.stories.tsx,packages/**/*.stories.mdx,**/packages/core/tokens,**/assets/**,**/docs,**/.cursor
 sonar.tests=packages/react/src
 sonar.test.inclusions=**/*.spec.tsx,**/*.spec.ts
-sonar.coverage.exclusions=.scripts/**,packages/core/typings/**,packages/core/scripts/**,packages/core/webpack/**,packages/helper/**, packages/core/styles/**
+sonar.coverage.exclusions=.scripts/**,packages/core/typings/**,packages/core/scripts/**,packages/core/webpack/**,packages/helper/**,packages/core/styles/**
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.qualitygate.wait=true
+
+sonar.javascript.lcov.reportPaths=coverage/
