--- a/packages/react/src/atomic/Button/package.json
+++ b/packages/react/src/atomic/Button/package.json
@@ -34,6 +34,7 @@
     "@nimbus-ds/icon": "workspace:^",
     "@nimbus-ds/icons": "workspace:^",
     "@nimbus-ds/skeleton": "workspace:^",
-    "@nimbus-ds/webpack": "workspace:^"
+    "@nimbus-ds/webpack": "workspace:^",
+    "@nimbus-ds/box": "workspace:^"
   }
 }
