--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -8,7 +8,7 @@ reviews:
   high_level_summary_placeholder: "@autosummary"
   auto_title_placeholder: "@autotitle"
   auto_title_instructions: "Generate a concise PR title following the format 'chore/fix/feat(PackageName): Title' where the type is determined by the nature of changes (chore for maintenance, fix for bug fixes, feat for new features), PackageName is the affected package, if any, and Title is a brief description of the changes."
-  auto_apply_labels: false # If the suggestions are correct, we can apply them automatically.
+  auto_apply_labels: true # If the suggestions are correct, we can apply them automatically.
   poem: false
   collapse_walkthrough: true
   labeling_instructions:
@@ -72,7 +72,7 @@ reviews:
         - Component, prop, and storybook documentation
         Highlight any deviations from these standards.
     - path: "**/CHANGELOG.md"
-      instructions: "Ensure CHANGELOG.md updates follow the established format: YYYY-MM-DD version with categorized entries (Breaking changes, New features, Bug fixes, Others). Each entry must include PR reference and author, and changes must be properly versioned (major/minor/patch). Changes MUST be documented in their respective package's CHANGELOG.md."
+      instructions: "Ensure CHANGELOG.md updates follow the established format: YYYY-MM-DD version with categorized entries (Breaking changes, New features, Bug fixes, Others). Each entry must include PR reference and author, and changes must be properly versioned (major/minor/patch). Changes MUST be documented in their respective package's CHANGELOG.md. **CRITICAL: Clearly highlight and document the packages bumps in the summary (or a comment, if unabled), in a well defined structure: '@nimbus-ds/<package-name>@<bump-version>|<semver-type>: <Description>.' For example: '@nimbus-ds/styles@9.18.0|minor: Added scroll-pane new composite component...'"
     - path: "**/package.json"
       instructions: "Verify version updates follow SemVer: major for breaking changes, minor for new features, patch for bug fixes. Ensure dependencies are properly versioned and peer dependencies are correctly specified."
     - path: "**/packages/react/src/atomic/**/*.{ts,tsx}"
