feat: moved into scripts and improved code structure

--- a/packages/core/scripts/.eslintrc
+++ b/packages/core/scripts/.eslintrc
@@ -6,6 +6,9 @@
       "version": "detect"
     }
   },
+  "rules": {
+    "no-console": "off"
+  },
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
   "extends": ["@tiendanube/eslint-config"]
