--- a/package.json
+++ b/package.json
@@ -59,18 +59,20 @@
   "devDependencies": {
     "@babel/core": "^7.18.10",
     "@babel/node": "^7.20.7",
+    "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.18.6",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@jest/types": "^28.1.3",
-    "@storybook/addon-essentials": "^7.6.4",
-    "@storybook/addon-interactions": "^7.6.4",
-    "@storybook/addon-links": "^7.6.4",
-    "@storybook/addon-mdx-gfm": "^7.6.4",
-    "@storybook/blocks": "^7.6.4",
-    "@storybook/preview-api": "^7.6.4",
-    "@storybook/react": "^7.6.4",
-    "@storybook/react-webpack5": "^7.6.4",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/addon-links": "^8.6.14",
+    "@storybook/addon-mdx-gfm": "^8.6.14",
+    "@storybook/addon-webpack5-compiler-babel": "^3.0.5",
+    "@storybook/blocks": "^8.6.14",
+    "@storybook/preview-api": "^8.6.14",
+    "@storybook/react": "^8.6.14",
+    "@storybook/react-webpack5": "^8.6.14",
     "@storybook/testing-library": "^0.2.2",
     "@svgr/webpack": "^6.5.1",
     "@testing-library/jest-dom": "^6.6.3",
@@ -105,7 +107,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-sonarjs": "^0.13.0",
     "eslint-plugin-spellcheck": "^0.0.19",
-    "eslint-plugin-storybook": "^0.6.15",
+    "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-testing-library": "^5.5.1",
     "husky": "^8.0.1",
     "jest": "^28.1.3",
@@ -115,8 +117,8 @@
     "lint-staged": "^13.0.3",
     "mini-css-extract-plugin": "^2.7.2",
     "prettier": "^2.7.1",
-    "storybook": "^7.6.4",
-    "storybook-dark-mode": "^3.0.3",
+    "storybook": "^8.6.14",
+    "storybook-dark-mode": "^4.0.2",
     "ts-jest": "^28.0.7",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
@@ -125,7 +127,7 @@
     "webpack-cli": "^5.0.1"
   },
   "engines": {
-    "node": ">=14.17 <=16.x",
+    "node": ">=18",
     "yarn": ">=3.2.0"
   },
   "packageManager": "yarn@3.2.2"
